# ytmusic_desktop

./: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: inject.js  main.rs
src/js/: inject.js  load_lib.js
